--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FigmaAnim</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header>
         <div class="container">
             <div class="header-wrap">
-                <img src="img/logo (1).png" alt="">
+                <img src="./img/logo (1).png" alt="">
                 <div class="items">
                     <div class="itemglav">
                         <p>Home</p>
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="main-sec1 flex">
                 <div class="box1">
-                    <img src="img/element.png" alt="">
+                    <img src="./img/element.png" alt="">
                     <div class="box1-child">
                     <h1>Virtual healthcare<br>for you</h1>
                     <p class="infop">Trafalgar provides progressive, and affordable<br>
@@ -46,7 +46,7 @@
                     <button class="consultbtn"><p class="btnp">Consult today</p></button>
                     </div>
                 </div>
-                <img src="img/trafalgar-header illustration 1.png" alt="" class="illustration">
+                <img src="./img/trafalgar-header illustration 1.png" alt="" class="illustration">
             </div>
         </div>
     </section>
